--- a/assets/css/connect_four/modules/_marker.scss
+++ b/assets/css/connect_four/modules/_marker.scss
@@ -36,7 +36,7 @@
 {
     .marker
     {
-        display:none;
+        display:none !important;
     }
 }
 
